# ibquant

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  agent.py  agent.yaml  pyproject.toml  reqs.txt  setup.cfg  setup.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml
assets/: styles.css
data/: README.md
docs/: README.md
ibquant/: exceptions.py
ibquant/callbacks/: returns.py
ibquant/cli/: commander.py  commands.py  console.py  ibquant_cli.py  utilities.py
ibquant/core/: __init__.py  account.py  advisor.py  base.py  brute.py  contract.py  factor.py  ibapp.py  learner.py  trader.py
ibquant/data/: historicalbars.py  historicalticks.py  marketcontracts.py
ibquant/dataclasses/: connect.py
ibquant/demos/: strategy.py
ibquant/factors/momentum/: aroon.py
ibquant/factors/trend/: bbands.py
ibquant/futures/: __init__.py  equityfuturefrontmonth.py  utils.py
ibquant/hooks/: brute.py  connection.py  logger.py  strategy.py  study.py  trader.py
ibquant/io/: __init__.py  downloader.py  unzip.py
ibquant/loggers/: returns.py  simple.py
ibquant/mixins/: __init__.py  account.py  advisor.py  connect.py  contract.py  data.py  group.py  order.py  strategy.py
ibquant/plotting/: __init__.py  marketdepth.py  strategy.py
ibquant/utilities/: __init__.py  downloader.py  equityfuturefrontmonth.py  ignore_path.py  parseconfigs.py
ibtrader/advisor/: __init__.py  advisor.py
ibtrader/callbacks/: returns.py
ibtrader/cli/: console.py  utilities.py  utils.py
ibtrader/core/: __init__.py  advisor.py  brute.py  contract.py  indicator.py  strategy.py  study.py  trader.py
ibtrader/dataclasses/: advisor.py  connect.py
ibtrader/hooks/: account.py  brute.py  connection.py  contract.py  logger.py  strategy.py  study.py  trader.py
ibtrader/indicators/: atr.py  dma.py  linearregression.py  longprofitexit.py  macd.py  momentum.py  rating.py  shortprofitexit.py  simplemeanreversion.py  technicalstockrating.py  vix_timer.py
ibtrader/indicators/momentum/: macd.py
ibtrader/loggers/: returns.py
ibtrader/strategies/: bbands.py  dma.py  linearregression.py  longprofitexit.py  rsi.py  vhftrend.py  vix_timer.py
ibtrader/studies/: aroon.py  keltnerchannel.py  momentum.py  rsi.py  shortprofitexit.py  vhftrend.py
ibtrader/typing/: types.py
ibtrader/utilities/: __init__.py  downloader.py  parseconfigs.py  unzip.py
sandbox/traders/: mes_trend_trader_trailing_bracket.py  trader_0001.py  trader_0002.py
sandbox/traders/trader_0001/: trader_0001.py
sandbox/traders/trader_0002/: datahistory_2022-08-31.csv  trader_0002.py
