[options]
packages = find:
install_requires =
    jupyter
    ib-insync
    alphalens-reloaded
    empyrical-reloaded
    pyfolio-reloaded
    zipline-reloaded
    yfinance
    quantlib
    pyzmq
    torch
    optuna
    wandb
    torch-tb-profiler
    hydra-core
    textual
    rich
    rich-cli
    plotly
    matplotlib
    fastapi
    pyarrow
    xarray
    scikit-learn
    torchserve
    pytorch-lightning
    pyEX
    Nasdaq-Data-Link
    beautifulsoup4
    click

[options.extras_require]
DEV =
    black ==22.1.0
    flake8 ==5.0.4
    pytest ==7.1.2
    mypy ==0.971
    coverage ==6.4.3
    pre-commit ==2.20.0
    isort ==5.10.1
    mkdocs-material ==8.3.9
    mkdocstrings ==0.19.0

[options.entry_points]
console_scripts =
    ib = ibquant.cli.ibquant_cli:main

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:pytest]
norecursedirs =
    .git
    .github
    .circleci
    *.egg-info
addopts =
    --disable-pytest-warnings
# filterwarnings = 

[coverage:run]
disable_warnings = couldnt-parse

[coverage:report]
ignore_errors = True
exclude_lines = pragma: no cover